--- a/prehtml/affine.htm
+++ b/prehtml/affine.htm
@@ -338,7 +338,7 @@ matrix and inverse matrix of each transformation. Why? You'll see.
 </table>
 
 <div class="cblock">
-<table id="tbl-aff-def" border=1>
+<table id="tbl-aff-def" class="border-std">
 <caption>
   Table <em>[[ref:tbl-aff-def]]</em>: transformation matrices and 
   their inverses.
@@ -880,7 +880,7 @@ somewhere.
 </p>
 
 <div class="cblock">
-<table id="tbl-aff-fun" border=1>
+<table id="tbl-aff-fun" class="border-std">
 <caption>
   <b>Table <em>[[ref:tbl-aff-fun]]</em></b>: affine functions
  </caption>
