--- a/prehtml/base.htm
+++ b/prehtml/base.htm
@@ -45,7 +45,7 @@
 
 <!-- std reg table
 <div class="reg">
-<table class="reg" border=1>
+<table class="reg border-std">
 <caption class="reg">
   REG_<em>XXX</em> @ <code>0400:<em>[[0000]]</em>h</code>
 </caption>
@@ -66,7 +66,7 @@
 <br>
 
 <table class="reg-desc">
-<tr align="left"><th>bits<th>name<th>define<th>description
+<tr><th>bits<th>name<th>define<th>description
 <tr>
   <td>0 <td class="rclr0">
   <td>
