--- a/prehtml/dma.htm
+++ b/prehtml/dma.htm
@@ -85,7 +85,7 @@ offset of 12 (see table&nbsp;1).
 </p>
 
 <div class="lblock">
-<table id="tbl-dma-regs" border=1>
+<table id="tbl-dma-regs" class="border-std">
 <caption>
   <b>Table <em>[[ref:tbl-dma-regs]]</em></b>: DMA register addresses
 </caption>
@@ -109,7 +109,7 @@ one for the actual control bits.
 </p>
 
 <div class="reg">
-<table class="reg" id="tbl-reg-dmaxcnt" border=1>
+<table id="tbl-reg-dmaxcnt" class="reg border-std">
 <caption class="reg">
   REG_DMAxCNT @ <code>0400:00B8</code>+12<i>x</i>
 </caption>
@@ -132,7 +132,7 @@ one for the actual control bits.
 <br>
 
 <table class="reg-desc">
-<tr align="left"><th>bits<th>name<th>define<th>description
+<tr><th>bits<th>name<th>define<th>description
 <tr class="bg0">
   <td>00-0F<td class="rclr0">N
   <td> 
