--- a/prehtml/first.htm
+++ b/prehtml/first.htm
@@ -503,7 +503,7 @@ class="keyw">volatile</span> u32*)(MEM_IO+<span class="num">0x0000</span>))
 </pre>
 
 <div class="cblock">
-<table class="c1-r" border=1 width="90%">
+<table class="border-std c1-r" width="90%">
 <tr>
   <th>code	<th>type	<th>description
 <tr>
