--- a/prehtml/fixed.htm
+++ b/prehtml/fixed.htm
@@ -323,7 +323,7 @@ shifts because they give a more consistent result.
 </p>
 
 <div class="cblock">
-<table id="tbl-neg-div" border=1>
+<table id="tbl-neg-div" class="border-std">
 <caption>
   <b>Table <em>[[ref:tbl-neg-div]]</em></b>:
   Division and right-shifts around zero.
@@ -723,8 +723,7 @@ that's rather monotonous). As you can see 1/7 in hex is
 </p>
 
 <div class="lblock">
-<table id="tbl-hexfloat"
-  border=1>
+<table id="tbl-hexfloat" class="border-std">
 <caption>
   <b>Table <em>[[ref:tbl-hexfloat]]</em></b>: 
   Floating-point representation of 1/7 in base <i>B</i>=16
@@ -750,8 +749,7 @@ the integer part, ignore the (hexi)decimals
 </p>
 
 <div class="cblock">
-<table id="tbl-rmdiv-bad"
-  border=1>
+<table id="tbl-rmdiv-bad" class="border-std">
 <caption>
   <b>Table <em>[[ref:tbl-rmdiv-bad]]</em></b>: 
   <i>x</i>/3, using <i>m</i>= 256\3 = 0x55. Bad at 3, 6, &hellip;
@@ -788,8 +786,7 @@ safe. At least, for a while.
 </table>
 
 <div class="cblock">
-<table id="tbl-rmdiv-good"
-  border=1>
+<table id="tbl-rmdiv-good" class="border-std">
 <caption>
   <b>Table <em>[[ref:tbl-rmdiv-good]]</em></b>: 
   <i>x</i>/3, using <i>m</i>= (256+2)\3 = 0x56. Still good at 3, 6, &hellip;
