--- a/prehtml/gfx.htm
+++ b/prehtml/gfx.htm
@@ -90,7 +90,7 @@ enable mosaic. For individual sprites, set
 </p>
 
 <div class="reg">
-<table class="reg" id="tbl-reg-mosaic" border=1>
+<table id="tbl-reg-mosaic" class="reg border-std">
 <caption class="reg">
   REG_MOSAIC @ <code>0400:004Ch</code>
 </caption>
@@ -383,7 +383,7 @@ levels.
 </p><br>
 
 <div class="reg">
-<table class="reg" id="tbl-reg-bldcnt" border=1>
+<table id="tbl-reg-bldcnt" class="reg border-std">
 <caption class="reg">
   REG_BLDCNT (REG_BLDMOD) @ <code>0400:0050h</code>
 </caption>
@@ -450,7 +450,7 @@ called that; they just are.
 </p>
 
 <div class="reg">
-<table class="reg" id="tbl-reg-bldalpha" border=1>
+<table id="tbl-reg-bldalpha" class="reg border-std">
 <caption class="reg">
   REG_BLDALPHA (REG_COLEV) @ <code>0400:0052h</code>
 </caption>
@@ -480,7 +480,7 @@ called that; they just are.
 <br>
 
 <div class="reg">
-<table class="reg" id="tbl-reg-bldy" border=1>
+<table id="tbl-reg-bldy" class="reg border-std">
 <caption class="reg">
   REG_BLDY (REG_COLEY) @ <code>0400:0054h</code>
 </caption>
@@ -798,7 +798,7 @@ following layout:
 </p>
 
 <div class="reg">
-<table class="reg" id="tbl-reg-winxy" border=1>
+<table id="tbl-reg-winxy" class="reg border-std">
 <caption class="reg">
   REG_WINxH and REG_WINxV @ <code>0400:0040-0400:0047h</code>
 </caption>
@@ -862,7 +862,7 @@ you intend to use blending on the contents of that particular window.
 </p>
 
 <div class="reg">
-<table class="reg" id="tbl-reg-winio" border=1>
+<table id="tbl-reg-winio" class="reg border-std">
 <tr class="bits">
     <th>register
 	<td>F E<td>D<td>C<td>B<td>A<td>9<td>8
