--- a/prehtml/interrupts.htm
+++ b/prehtml/interrupts.htm
@@ -102,7 +102,7 @@ sender. With that in mind, let's check out the bit layout for
 </p>
 
 <div class="reg">
-<table class="reg" id="tbl-reg-ie" border=1>
+<table id="tbl-reg-ie" class="reg border-std">
 <caption class="reg">
   REG_IE @ <code>0400:0200</code> and REG_IF @ <code>0400:0202</code>
 </caption>
