--- a/prehtml/keys.htm
+++ b/prehtml/keys.htm
@@ -78,7 +78,7 @@ name of the button, in caps.
 </p>
 
 <div class="reg">
-<table class="reg" id="tbl-reg-keys" border=1>
+<table id="tbl-reg-keys" class="reg border-std">
 <caption class="reg">
   REG_KEYINPUT (REG_P1) @ <code>0400:0130h</code>
 </caption>
@@ -154,7 +154,7 @@ of this register you need to know how to work with
 </p><br>
 
 <div class="reg">
-<table class="reg" id="tbl-reg-keycnt" border=1>
+<table id="tbl-reg-keycnt" class="reg border-std">
 <caption class="reg">
   REG_KEYCNT (REG_P1CNT) @ <code>0400:0132h</code>
 </caption>
