--- a/prehtml/lab.htm
+++ b/prehtml/lab.htm
@@ -353,8 +353,7 @@ fig&nbsp;<em>[[ref:img-prio-demo]]</em>b; table
 </tbody>
 </table>
 
-<table id="tbl-prio-demo-x"
-  border=1>
+<table id="tbl-prio-demo-x" class="border-std">
 <caption>
   <b>Table <em>[[ref:tbl-prio-demo-x]]</em></b>: legend for 
   <em>[[ref:img-prio-demo]]</em>b.
@@ -582,8 +581,7 @@ hack in the function, shortly followed by the second one.
 </p>
 
 <div class="cpt_fr" style="width:120px;">
-<table id="tbl-prio-hack1"
-  border=1>
+<table id="tbl-prio-hack1" class="border-std">
 <caption>
   <b>Table <em>[[ref:tbl-prio-hack1]]</em></b>: object palette banks.
 </caption>
@@ -832,7 +830,7 @@ faster. but the final implementation will be up to you.
 
 <!-- std reg table
 <div class="reg">
-<table class="reg" border=1>
+<table  class="reg border-std">
 <caption class="reg">
   REG_<em>XXX</em> @ <code>0400:<em>[[0000]]</em>h</code>
 </caption>
