--- a/prehtml/mode7.htm
+++ b/prehtml/mode7.htm
@@ -368,7 +368,7 @@ operation. Given a scanline <i>h</i>, here's what we do:
 </ol>
 
 <div class="cblock">
-<table id="img-steps" border=1>
+<table id="img-steps" class="border-std">
 <caption>
   Fig <em>[[ref:img-steps]]</em>a-d: The 4 steps of mode 7
 </caption>
@@ -451,21 +451,24 @@ is:
   <table class="eqtbl basic">
   <tr>
     <td> <b>dx</b> + <b>P</b>&middot;<b>q</b>
-	<td> =
-	<td> <b>p</b>
+    <td> =
+    <td> <b>p</b>
+    <td></td>
   <tr>
-    <td class="bdrB"> <b>P</b>&middot;(<b>q &minus; x</b><sub>s</sub>)
+    <td class="bdrB"> <b>P</b>&middot;(<b>q</b>&minus;<b>x</b><sub>s</sub>)
     <td class="bdrB">=
-	<td class="bdrB"> <b>p &minus; a</b>
+    <td class="bdrB"> <b>p</b> &minus; <b>a</b>
     <td class="bdrB">&minus;
   <tr>
     <td> <b>dx + P</b>&middot;<b>x</b><sub>s</sub>
-	<td> =
-	<td> <b>a</b>
+    <td> =
+    <td> <b>a</b>
+    <td></td>
   <tr>
     <td><b>dx</b>
-	<td> = 
-	<td> <b>a</b> &minus; <b>P</b>&middot;<b>x</b><sub>s</sub>
+    <td> = 
+    <td> <b>a</b> &minus; <b>P</b>&middot;<b>x</b><sub>s</sub>
+    <td></td>
   </table>
 </table>
 
@@ -733,7 +736,7 @@ are the differences:
 </ol>
 
 <div class="cpt_fr">
-<table id="tbl-divs" border=1>
+<table id="tbl-divs" class="border-std">
 <caption>
   <b>Table <em>[[ref:tbl-divs]]</em></b>: division tables and zoom 
 	factors. <i>a</i><sub>y</sub>=32
