--- a/prehtml/mode7ex.htm
+++ b/prehtml/mode7ex.htm
@@ -1455,7 +1455,7 @@ following rests to perform:
 </p>
 
 <div class="lblock">
-<table id="tbl-culltest" border=1>
+<table id="tbl-culltest" class="border-std">
 <caption>
   <b>Table <em>[[ref:tbl-culltest]]</em></b>:
   Object rect and culling tests in camera space. Note the signs!
@@ -2837,7 +2837,7 @@ Experiment with them and see what you like.
 </p>
 
 <div class="cblock">
-<table id="tbl-motion" border=1>
+<table id="tbl-motion" class="border-std">
 <caption>
   <b>Table <em>[[ref:tbl-motion]]</em></b>: 
   Movement methods and their associated transformations to world-space.
