--- a/prehtml/objbg.htm
+++ b/prehtml/objbg.htm
@@ -486,7 +486,7 @@ It's alright if you don't understand it right away; I'll explain in
 more detail in the following pages.
 </p>
 <div class="cblock">
-<table id="tbl-sum" border=1 width="70%">
+<table id="tbl-sum" class="border-std" width="70%">
 <col span=3 valign="top">
 <tr><th width="30%">Subject		<th>Backgrounds		<th>Sprites
 <tr><td>Number		<td>4 (2 affine)	<td>128	(32 affine)
@@ -545,7 +545,7 @@ list of differences in names.
 </p>
 
 <div class="cblock">
-<table id="tbl-name" border=1 width="70%">
+<table id="tbl-name" class="border-std" width="70%">
 <col span=3 valign="top">
 <tr><th>Subject		<th>Traditional		<th>Tonc
 <tr>
