--- a/prehtml/regbg.htm
+++ b/prehtml/regbg.htm
@@ -166,7 +166,7 @@ bytes) long, giving four blocks overall.
 </p>
 
 <div class="cblock">
-<table id="tbl-cbb-sbb" border=1 cellpadding=3 rules=groups>
+<table id="tbl-cbb-sbb" class="border-std" cellpadding=3 rules=groups>
 <caption>
   <b>Table <em>[[ref:tbl-cbb-sbb]]</em></b>:
   charblock and screenblock overlap.
@@ -270,7 +270,7 @@ on the <a href="affine.htm">affine matrix</a>.
 </p>
 
 <div class="lblock">
-<table id="tbl-bg-types" border=1>
+<table id="tbl-bg-types" class="border-std">
 <caption>
   <b>Table <em>[[ref:tbl-bg-types]]</em></b>: video modes and 
   background type
@@ -306,7 +306,7 @@ pairs. These start at <code>0400:0010</code>
 </p>
 
 <div class="lblock">
-<table id="tbl-ctrl-ofs" border=1>
+<table id="tbl-ctrl-ofs" class="border-std">
 <caption align= bottom>
   <b>Table <em>[[ref:tbl-ctrl-ofs]]</em></b>: Background register 
     addresses
@@ -329,7 +329,7 @@ same bits you may have to be careful that you're using the right
 </p>
 
 <div class="reg">
-<table class="reg" id="tbl-reg-bgxcnt" border=1>
+<table id="tbl-reg-bgxcnt" class="reg border-std">
 <caption class="reg">
   REG_BGxCNT @ <code>0400:0008</code> + 2<i>x</i>
 </caption>
@@ -391,7 +391,7 @@ same bits you may have to be careful that you're using the right
 <table class="frame-group" width="100%">
 <tr align="center">
 <td>
-  <table id="tbl-reg-size" border=1>
+  <table id="tbl-reg-size" class="border-std">
   <caption>
     <b>Table <em>[[ref:tbl-reg-size]]</em>a</b>: regular bg sizes
   </caption>
@@ -405,7 +405,7 @@ same bits you may have to be careful that you're using the right
   </tbody>
   </table>
 <td>
-  <table id="tbl-aff-size" border=1>
+  <table id="tbl-aff-size" class="border-std">
   <caption>
     <b>Table <em>[[ref:tbl-reg-size]]</em>b</b>: affine bg sizes
   </caption>
@@ -597,7 +597,7 @@ only 8 bits wide and just contain an 8bit tile index.
 </p>
 
 <div class="reg">
-<table class="reg" id="tbl-se" border=1>
+<table id="tbl-se" class="reg border-std">
 <caption class="reg nowrap">
   Screen entry format for regular backgrounds
 </caption>
@@ -662,7 +662,7 @@ the SE-number inside that screenblock.
 </style>
 
 <div class="lblock">
-<table class="reg-like" id="tbl-reg-layout" border=1>
+<table id="tbl-reg-layout" class="reg-like border-std">
 <caption>
   <b>Table <em>[[ref:tbl-reg-layout]]</em></b>: screenblock layout of 
   regular backgrounds.
@@ -782,7 +782,7 @@ it starts at <i>id</i>&middot;20h for 4bit tiles, but at <i>id</i>&middot;40h fo
 </p>
 
 <div class="lblock">
-<table id="tbl-bg-tids" border=1>
+<table id="tbl-bg-tids" class="border-std">
 <caption>
   <b>Table <em>[[ref:tbl-bg-tids]]</em></b>: tile counting 
   for backgrounds, sticks to its bit-depth.
