--- a/prehtml/regobj.htm
+++ b/prehtml/regobj.htm
@@ -162,7 +162,7 @@ nothing shows up, it's possible you filled the wrong palette.
 </p>
 
 <div class="lblock">
-<table id="tbl-obj-tids" border=1 cellpadding=1>
+<table id="tbl-obj-tids" class="border-std" cellpadding=1>
 <caption>
   <b>Table <em>[[ref:tbl-obj-tids]]</em></b>: tile counting for sprites, 
   always per 32 bytes. (You can use odd numbers for 8bpp tiles, but 
@@ -362,7 +362,7 @@ and will save <a href="affobj.htm">affine sprites</a> for later.
 </p>
 
 <div class="lblock">
-<table id="tbl-obj-weave" class="reg" border=1>
+<table id="tbl-obj-weave" class="reg border-std">
 <caption>
   <b>Table <em>[[ref:tbl-obj-weave]]</em></b>: 
   memory interlace of OBJ_ATTR and 
@@ -415,7 +415,7 @@ palette).
 </p>
 
 <div class="reg">
-<table class="reg" id="tbl-oe-attr0" border=1>
+<table id="tbl-oe-attr0" class="reg border-std">
 <caption class="reg">
   <code>OBJ_ATTR.attr0</code>
 </caption>
@@ -496,7 +496,7 @@ that.
 </p>
 
 <div class="lblock">
-<table id="tbl-obj-size" class="reg" border=1>
+<table id="tbl-obj-size" class="reg border-std">
 <caption>
   <b>Table <em>[[ref:tbl-obj-size]]</em></b>: GBA sprite sizes
 </caption>
@@ -518,7 +518,7 @@ should be used. If not, they hold flipping flags.
 </p>
 
 <div class="reg">
-<table class="reg" id="tbl-oe-attr1" border=1>
+<table id="tbl-oe-attr1" class="reg border-std">
 <caption class="reg">
   <code>OBJ_ATTR.attr1</code>
 </caption>
@@ -580,7 +580,7 @@ say what sub-palette should be used.
 </p>
 
 <div class="reg">
-<table class="reg" id="tbl-oe-attr2" border=1>
+<table id="tbl-oe-attr2" class="reg border-std">
 <caption class="reg">
   <code>OBJ_ATTR.attr2</code>
 </caption>
