--- a/prehtml/setup.htm
+++ b/prehtml/setup.htm
@@ -546,7 +546,7 @@ of the options.
 
 
 <div class="lblock">
-<table id="tbl-tonc-cfg" border=1 frame=void rules=cols>
+<table id="tbl-tonc-cfg" border="1" frame=void rules=cols>
 <caption>
   <b>Table <em>[[ref:tbl-tonc-cfg]]</em></b>: building tonc projects.
 </caption>
@@ -1196,7 +1196,7 @@ as well:
 </p>
 
 <div class="lblock">
-<table id="tbl-make-vardef" border=1>
+<table id="tbl-make-vardef" class="border-std">
 <caption>
   <b>Table</b> <em>[[ref:tbl-make-vardef]]</em>: variable definitions.
 </caption>
@@ -1263,7 +1263,7 @@ of the automatic variables available; for a full list, go to the
 
 
 <div class="lblock">
-<table id="tbl-make-autovars" border=1>
+<table id="tbl-make-autovars" class="border-std">
 <caption>
   <b>Table</b> <em>[[ref:tbl-make-autovars]]</em>: automatic variables for rules.
 </caption>
