--- a/prehtml/sndsqr.htm
+++ b/prehtml/sndsqr.htm
@@ -238,7 +238,7 @@ notes don't <i>quite</i> fit in exactly.
 </p>
 
 <div class="cblock">
-<table id="tbl-oct0" border=1>
+<table id="tbl-oct0" class="border-std">
 <caption>
   <b>Table <em>[[ref:tbl-oct0]]</em></b>: notes &amp; frequencies of 
   octave 0
@@ -422,7 +422,7 @@ which IMHO makes more sense than the other two.
 </p>
 
 <div class="cblock">
-<table id="tbl-snd-names" border=1>
+<table id="tbl-snd-names" class="border-std">
 <caption>
   <b>Table <em>[[ref:tbl-snd-names]]</em></b>: Sound register nomenclature.
 </caption>
@@ -501,7 +501,7 @@ set at least some bits on each of these to get anything to work.
 </p>
 
 <div class="reg">
-<table class="reg" border=1>
+<table  class="reg border-std">
 <caption class="reg">
   REG_SNDDMGCNT (SOUNDCNT_L / SGCNT0_L ) @ <code>0400:0080h</code>
 </caption>
@@ -575,7 +575,7 @@ class="num">8</span>) | ((_rmode)&lt;&lt;<span class="num">12</span>) )
 </pre><br>
 
 <div class="reg">
-<table class="reg" border=1>
+<table  class="reg border-std">
 <caption class="reg">
   REG_SNDDSCNT (SOUNDCNT_H / SGCNT0_H) @ <code>0400:0082h</code>
 </caption>
@@ -651,7 +651,7 @@ you need to set bit 7 there.
 </p>
 
 <div class="reg">
-<table class="reg" border=1>
+<table  class="reg border-std">
 <caption class="reg">
   REG_SNDSTAT (SOUNDCNT_X / SGCNT1) @ <code>0400:0084h</code>
 </caption>
@@ -763,7 +763,7 @@ they have exactly the same function.
 </p>
 
 <div class="reg">
-<table class="reg" id="tbl-reg-snd1cnt" border=1>
+<table id="tbl-reg-snd1cnt" class="reg border-std">
 <caption class="reg nowrap">
   REG_SND1CNT (SOUND1CNT_H / SG10_H) @ <code>0400:0062h</code>
   <br> and <br>
@@ -866,7 +866,7 @@ they really did sound the same to me.
 </p><br>
 
 <div class="reg">
-<table class="reg" id="tbl-reg-snd1freq" border=1>
+<table id="tbl-reg-snd1freq" class="reg border-std">
 <caption class="reg nowrap">
   REG_SND1FREQ (SOUND1CNT_X / SG11) @ <code>0400:0062h</code>
   <br> and <br>
@@ -912,7 +912,7 @@ they really did sound the same to me.
 </div><br>
 
 <div class="reg">
-<table class="reg" id="tbl-reg-snd1sweep" border=1>
+<table id="tbl-reg-snd1sweep" class="reg border-std">
 <caption class="reg">
   REG_SND1SWEEP (SOUND1CNT_L / SG10_L) @ <code>0400:0060h</code>
 </caption>
