--- a/prehtml/text.htm
+++ b/prehtml/text.htm
@@ -440,8 +440,7 @@ got in front of you.
 <h4>Bitpacking</h4>
 
 <div class="cpt_fr" style="width:220px;">
-<table id="tbl-endian"
-  border=1>
+<table id="tbl-endian" class="border-std">
 <caption>
   <b>Table <em>[[ref:tbl-endian]]</em></b>: Big endian vs little 
   endian interpretation of byte-sequence 01h, 02h, 03h, 04h
@@ -2444,8 +2443,7 @@ class="num">16</span>)|REG_TM2D;
 </div>
 
 <div class="lblock">
-<table id="tbl-txt-se2"
-  border=1>
+<table id="tbl-txt-se2" class="border-std">
 <caption>
   <b>Table <em>[[ref:tbl-txt-se2]]</em></b>: timing results for hardware, 
   vba and no$gba.
