--- a/prehtml/timers.htm
+++ b/prehtml/timers.htm
@@ -98,7 +98,7 @@ on that later. It should be noted that the screen refreshes every
 </p>
 
 <div class="lblock">
-<table id="tbl-tmr-freq" border=1>
+<table id="tbl-tmr-freq" class="border-std">
 <caption>
   <b>Table <em>[[ref:tbl-tmr-freq]]</em></b>: Timer frequencies
 </caption>
@@ -121,7 +121,7 @@ found in table <em>[[ref:tbl-tmr-reg]]</em>.
 </p>
 
 <div class="lblock">
-<table id="tbl-tmr-reg" border=1>
+<table id="tbl-tmr-reg" class="border-std">
 <caption>
   <b>Table <em>[[ref:tbl-tmr-reg]]</em></b>: Timer register addresses
 </caption>
@@ -137,7 +137,7 @@ found in table <em>[[ref:tbl-tmr-reg]]</em>.
   REG_TMxCNT</h3>
 
 <div class="reg">
-<table class="reg" id="tbl-reg-tmxcnt" border=1>
+<table id="tbl-reg-tmxcnt" class="reg border-std">
 <caption class="reg">
   REG_TMxCNT @ <code>0400:0102</code> + 4<i>x</i>
 </caption>
