--- a/prehtml/tte.htm
+++ b/prehtml/tte.htm
@@ -600,7 +600,7 @@ abbreviations that need to be clarified.
 </ul>
 
 <div class="lblock">
-<table id="tbl-tte-family" border=1>
+<table id="tbl-tte-family" class="border-std">
 <caption>
   <b>Table <em>[[ref:tbl-tte-family]]</em></b>: TTE render family 
   indicators and initializers. 4bpp Tiles can be row or column major 
@@ -641,7 +641,7 @@ abbreviations that need to be clarified.
 </div><br>
 
 <div class="lblock">
-<table id="tbl-tte-drawg" border=1>
+<table id="tbl-tte-drawg" class="border-std">
 <caption>
   <b>Table <em>[[ref:tbl-tte-drawg]]</em></b>: Render type summary.
 </caption>
@@ -690,7 +690,7 @@ they have helped me read my own code.
 </p>
 
 <div class="lblock">
-<table id="tbl-tte-brevs" border=1 cellpadding=4>
+<table id="tbl-tte-brevs" class="border-std" cellpadding=4>
 <caption>
 Table&nbsp;<em>[[ref:tbl-tte-brevs]]</em>. Abbreviations used in 
 rendering code.
@@ -3048,7 +3048,7 @@ thing, depending on the number of parameters.
 </p>
 
 <div class="cblock">
-<table id="tbl-tte-cmd" border=1 width= 70%>
+<table id="tbl-tte-cmd" class="border-std" width= 70%>
 <caption>
   <b>Table <em>[[ref:tbl-tte-cmd]]</em></b>: Available TTE formatting 
   tags.
@@ -3477,7 +3477,7 @@ The ones you'll encounter most are the following:
 </p>
 
 <div class="lblock">
-<table id="tbl-vt100" border=1>
+<table id="tbl-vt100" class="border-std">
 <caption>
   <b>Table <em>[[ref:tbl-vt100]]</em></b>: Common VT100 sequences
 </caption>
@@ -3580,7 +3580,7 @@ representing bigger numbers.
 </p>
 
 <div class="cblock">
-<table id="tbl-utf8" border=1 cellpadding=4>
+<table id="tbl-utf8" class="border-std" cellpadding=4>
 <caption>
 Table&nbsp;<em>[[ref:tbl-utf8]]</em>. UTF-8 to u32 conversion table.
 </caption>
@@ -3770,7 +3770,7 @@ followed by death. Good luck!&rdquo;
 </blockquote>
 
 <div class="lblock">
-<table id="tbl-tte-profile" border=1>
+<table id="tbl-tte-profile" class="border-std">
 <caption>
   <b>Table <em>[[ref:tbl-tte-profile]]</em></b>: 
   Renderer times. Conditions: 194 chars, verdana 9, 
