--- a/prehtml/video.htm
+++ b/prehtml/video.htm
@@ -105,7 +105,7 @@ table <em>[[ref:tbl-disp-timing]]</em>.
   </div>
 
   <td>
-	<table id="tbl-disp-timing" border=1>
+	<table id="tbl-disp-timing" class="border-std">
 	<caption>
 	  <b>Table <em>[[ref:tbl-disp-timing]]</em></b>: Display timing details
 	</caption>
@@ -254,7 +254,7 @@ been explained in the
 </p>
 
 <div class="reg">
-<table class="reg" id="tbl-reg-dispcnt" border=1>
+<table id="tbl-reg-dispcnt" class="reg border-std">
 <caption class="reg">
   REG_DISPCNT @ <code>0400:0000h</code>
 </caption>
@@ -349,7 +349,7 @@ know how that works, don't you?
 </p>
 
 <div class="reg">
-<table class="reg" id="tbl-reg-dispstat" border=1>
+<table id="tbl-reg-dispstat" class="reg border-std">
 <caption class="reg">
   REG_DISPSTAT @ <code>0400:0004h</code>
 </caption>
@@ -406,7 +406,7 @@ know how that works, don't you?
 </div><br>
 
 <div class="reg">
-<table class="reg" id="tbl-reg-vcount" border=1>
+<table id="tbl-reg-vcount" class="reg border-std">
 <caption class="reg">
   REG_VCOUNT @ <code>0400:0006h</code> (read-only)
 </caption>
