--- a/prehtml/bitmaps.htm
+++ b/prehtml/bitmaps.htm
@@ -190,7 +190,7 @@ The bitmap modes have the following characteristics:
 </p>
 
 <div class="lblock">
-<table id="tbl-bm-types" border=1>
+<table id="tbl-bm-types" class="border-std">
 <caption>
   <b>Table <em>[[ref:tbl-bm-types]]</em></b>: Bitmap mode 
   characteristics
@@ -1244,7 +1244,7 @@ Look in their respective readme's for more details.
 </div>
 
 <div class="cpt_fr" style="width:222px;">
-<table id="tbl-endian" border=1>
+<table id="tbl-endian" class="border-std">
 <caption>
   <b>Table <em>[[ref:tbl-endian]]</em></b>: Big endian vs little 
   endian interpretation of byte-sequence 01h, 02h, 03h, 04h
