--- a/prehtml/intro.htm
+++ b/prehtml/intro.htm
@@ -256,7 +256,7 @@ number of html-tag conventions. To make sure we're all on the same
 page here's a list:
 </p>
 <div class="lblock">
-<table border=1>
+<table class="border-std">
 <tr><th>Type	<th>notation	<th>example
 <tr><td>bit n in a <code>foo</code>		<td><code>foo</code>{n}	
   <td><code>REG_DISPCNT{4}</code> (active page bit)
@@ -276,7 +276,7 @@ depending on how old your browser is. These are:
 </p>
 
 <div class="lblock">
-<table border=1>
+<table class="border-std">
 <tr><th>symbol<th>description
 <tr><td>&alpha;, &beta;, &gamma;	<td>Greek letters
 <tr><td>&asymp;		<td>approximately
@@ -302,7 +302,7 @@ quite common. Anyway, here's a list.
 </p>
 
 <div class="lblock">
-<table border=1>
+<table class="border-std">
 <tr><th>base type	<th>alt name <th>unsigned	<th>signed	<th>volatile
 <tr><th>char		<td>byte	 <td>u8			<td>s8		<td>vu8 / vs8
 <tr><th>short		<td>halfword <td>u16		<td>s16		<td>vu16 / vs16
@@ -347,7 +347,7 @@ like this:
 </p>
 
 <div class="reg">
-<table class="reg" border=1>
+<table  class="reg border-std">
 <caption class="reg">
   REG_DISPSTAT @ <code>0400:0004h</code>
 </caption>
